--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>XYZ Wizard – Summoning Success in Every Print</title>
+  <title>XYZ Wizard – Summoning Success in Every Print - Development Page</title>
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
