--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
   <!-- Main -->
   <main class="gallery container">
     <!-- Image grid or carousel -->
-    <p>Print gallery coming soon! Stay Tuned!.</p>
+    <p>DEVELOPMENT IN PROGRESS</p>
   </main>
 
   <!-- Footer -->
